@@ -1,0 +1,9 @@
+#objdump: -s -j .xdata
+#name: PE x64 SEH test 3
+
+.*: .*
+
+Contents of section .xdata:
+ 0000 09080305 08520403 01500000 00000000  .....R...P......
+ 0010 01000000 0f000000 1c000000 00000000  ................
+ 0020 1c000000 .* 
